# Optimial-Controller

./: CMakeLists.txt  README.md
example/: FuzzyLogic_Example.cpp  LQG_Example.cpp  LQR_Example.cpp  MPC_Example.cpp  PID_Example.cpp
include/: FuzzyLogic.hpp  LQG.hpp  LQR.hpp  MPC.hpp  PID.hpp
source/: FuzzyLogic.cpp  LQG.cpp  LQR.cpp  MPC.cpp  PID.cpp  StateSpaceModel.cpp
test/: PID_Test.cpp
utilities/: StateSpaceModel.hpp
